--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.vispOF2z.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.Dc2q3mKW.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.CmiXSzHZ.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.Dz_ZqNkn.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/runtime.CkZ10TKx.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.B9J0_DcG.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.B94KC8ZJ.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index-client.DTbjmbw2.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.DJKhoG-R.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.USWSPQgG.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/render.DSSPWdWO.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/svelte-head.DdHCPlh0.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/template.BsQ56n95.js">
@@ -25,7 +25,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1di4703 = {
+					__sveltekit_1grf77i = {
 						base: "/alparslan-labs.github.io",
 						assets: "/alparslan-labs.github.io"
 					};
@@ -33,8 +33,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/alparslan-labs.github.io/app/immutable/entry/start.vispOF2z.js"),
-						import("/alparslan-labs.github.io/app/immutable/entry/app.DJKhoG-R.js")
+						import("/alparslan-labs.github.io/app/immutable/entry/start.CmiXSzHZ.js"),
+						import("/alparslan-labs.github.io/app/immutable/entry/app.USWSPQgG.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
