--- a/roadmap.html
+++ b/roadmap.html
@@ -10,18 +10,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./app/immutable/assets/0.Dw-4YvVk.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.CmiXSzHZ.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.Dz_ZqNkn.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.ILKSzqRk.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.Bpkhl6oY.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/runtime.CkZ10TKx.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.B94KC8ZJ.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.CMZjdKfu.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index-client.DTbjmbw2.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.USWSPQgG.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.CT0aXGFv.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/render.DSSPWdWO.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.DdHCPlh0.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/template.BsQ56n95.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.D9CWuTAz.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.BmLhOTJE.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/attributes.COvB-EjU.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/legacy.CtaTdtmd.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/23.BkRNxWVr.js">
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_1grf77i = {
+					__sveltekit_weya57 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/alparslan-labs.github.io"
 					};
@@ -39,8 +39,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.CmiXSzHZ.js"),
-						import("./app/immutable/entry/app.USWSPQgG.js")
+						import("./app/immutable/entry/start.ILKSzqRk.js"),
+						import("./app/immutable/entry/app.CT0aXGFv.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 23],
