--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.sbkmxuCY.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.CWJfKvdD.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.B_6Q_D5H.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.Bcr6LvCt.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/runtime.CkZ10TKx.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.B4EIsidS.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.DTZ7mQY7.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index-client.DTbjmbw2.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.nmILnv4S.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.C15Ckc7b.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/render.DSSPWdWO.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/svelte-head.DdHCPlh0.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/template.BsQ56n95.js">
@@ -25,7 +25,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_le16jh = {
+					__sveltekit_f8cm56 = {
 						base: "/alparslan-labs.github.io",
 						assets: "/alparslan-labs.github.io"
 					};
@@ -33,8 +33,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/alparslan-labs.github.io/app/immutable/entry/start.sbkmxuCY.js"),
-						import("/alparslan-labs.github.io/app/immutable/entry/app.nmILnv4S.js")
+						import("/alparslan-labs.github.io/app/immutable/entry/start.B_6Q_D5H.js"),
+						import("/alparslan-labs.github.io/app/immutable/entry/app.C15Ckc7b.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
